--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="circle move" data-value="-1"></div>
+    <div id="circulo1" class="circle move" data-value="-1"></div>
     <div class="circle move" data-value="-1"></div>
     <div class="circle move" data-value="-1"></div>
     <div class="circle move" data-value="-1"></div>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="container">
-        <p>Estás perdido en el tiempo y en el espacio</p>
+        <p class="frase">Estás perdido en el tiempo y en el espacio</p>
         <h1>404</h1>
         <a href="https://www.instagram.com/" target="_blank">Go to instagram</a>
         <img src="./svg/astro.png" alt="Astronaut_img">
