--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>ERROR 404 Guido Carini</title>
 </head>
 <body>
-
+    
     <div id="circulo1" class="circle move" data-value="-1"></div>
-    <div class="circle move" data-value="-1"></div>
-    <div class="circle move" data-value="-1"></div>
-    <div class="circle move" data-value="-1"></div>
+    <div id="circulo2" class="circle move" data-value="-1"></div>
+    <div id="cirulo3" circuloclass="circle move" data-value="-1"></div>
+    <div id="circulo4"class="circle move" data-value="-1"></div>
 
     <div class="reloj">
         <img src="./svg/reloj.svg" alt="reloj_img">
